--- a/assets/lm-css/mainStyle-lm.css
+++ b/assets/lm-css/mainStyle-lm.css
@@ -4,8 +4,17 @@ body {
     background-color: rgb(253, 246, 236);
 }
 
+.dark-mode {
+    min-height: 800px;
+    background-color: rgba(0, 0, 0, 0.815);
+}
+
 body div {
     /* border: 1px solid black; */
+}
+
+.dark-mode-text {
+    color:rgb(253, 246, 236);
 }
 
 .top-box {
@@ -42,6 +51,16 @@ body div {
     height: 50px;
     border: 1px solid gray;
     outline: 0;
+}
+
+.search-bar-dark {
+    font-size: large;
+    border-radius: 30px;
+    width: 500px;
+    height: 50px;
+    border: 1px solid gray;
+    outline: 0;
+    background-color: rgba(0, 0, 0, .5);
 }
 
 .search-bar:focus {
